--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1041,7 +1041,7 @@
 
       <!-- Section Actions -->
       <div class="user-dropdown-section">
-        <a href="" class="user-dropdown-item">
+        <a href="{{ path('app_settings') }}" class="user-dropdown-item">
           <div class="user-dropdown-item-icon">
             <i class="fas fa-cog"></i>
           </div>
