--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -449,16 +449,16 @@
         <i class="fas fa-receipt"></i>
         <span>Abonnements</span>
       </a>
-      <a href=""
-         class="nav-item {{ app.request.attributes.get('_route') == 'app_preferences' ? 'active' : '' }}">
+      <a href="{{ path('app_settings') }}"
+         class="nav-item {{ app.request.attributes.get('_route') == 'app_settings' ? 'active' : '' }}">
         <i class="fas fa-gear"></i>
-        <span>Préférences</span>
+        <span>Paramètres</span>
       </a>
-      <a href=""
+      {# <a href=""
          class="nav-item {{ app.request.attributes.get('_route') == 'app_security' ? 'active' : '' }}">
         <i class="fas fa-shield"></i>
         <span>Sécurité</span>
-      </a>
+      </a> #}
     </div>
   </nav>
 
