--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -428,12 +428,12 @@
         <i class="fas fa-wand-magic-sparkles"></i>
         <span>Générateur</span>
       </a>
-      <a href=""
-         class="nav-item {{ app.request.attributes.get('_route') == 'app_notes' ? 'active' : '' }}">
+      <a href="{{path('app_note')}}"
+         class="nav-item {{ app.request.attributes.get('_route') == 'app_note' ? 'active' : '' }}">
         <i class="fas fa-note-sticky"></i>
         <span>Notes sécurisées</span>
       </a>
-      <a href=""
+      <a href="{{path('app_security_checker')}}"
          class="nav-item {{ app.request.attributes.get('_route') == 'app_security_checker' ? 'active' : '' }}">
         <i class="fas fa-shield-heart"></i>
         <span>Vérificateur de sécurité</span>
